--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tfk-seneca-skoleskyss-duplicate",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Check for duplicates",
   "license": "MIT",
   "author": {
@@ -17,9 +17,9 @@
     "node": ">=4.6.0"
   },
   "scripts": {
-    "test": "standard && tap --reporter=spec test/*.js",
-    "coverage": "tap test/*.js --coverage",
-    "coveralls": "tap --cov --coverage-report=lcov test/*.js && cat coverage/lcov.info | coveralls",
+    "test": "standard && nsp check && tap --reporter=spec test/**/*.js",
+    "coverage": "tap test/**/*.js --coverage",
+    "coveralls": "tap --cov --coverage-report=lcov test/**/*.js && cat coverage/lcov.info | coveralls",
     "start": "node service.js",
     "isolated": "TFK_SENECA_SKOLESKYSS_DUPLICATE_ISOLATED=1 node service.js",
     "setup": "npm install && node setup.js"
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "coveralls": "2.11.14",
+    "nsp": "2.6.1",
     "standard": "8.2.0",
     "tap": "7.1.2"
   },
